solicion de bugs

--- a/client/src/componentes/details/details.module.css
+++ b/client/src/componentes/details/details.module.css
@@ -12,6 +12,10 @@
   align-items: center;
   border: 1px solid black;
 }
+.imgCont img{
+  height: auto;
+  width: 400px;
+}
 
 .textCont {
   background-color: #edeff0;
