--- a/client/src/componentes/home/home.module.css
+++ b/client/src/componentes/home/home.module.css
@@ -22,27 +22,35 @@
 }
 
 .imgHero {
-  width: 950px;
-  height: 700px;
+  width: 50%;
+  height: 90%;
   position: absolute;
   right: 80px;
   z-index: 100;
   display: flex;
 }
 
+.messi {
+  width: 60%;
+}
+
+.extras {
+  width: 40%;
+}
+
 .img1 {
   background-image: url('../../img/messi.jpg');
   background-position: center;
   background-size: cover;
-  width: 540px;
-  height: 673px;
+  width: 90%;
+  height: 90%;
   position: relative;
   z-index: 10;
 }
 
 .img11 {
-  width: 540px;
-  height: 673px;
+  width: 53%;
+  height: 90%;
   position: absolute;
   background-color: black;
   top: 20px;
@@ -52,24 +60,36 @@
 
 .img2 {
   background-image: url('../../img/img2.png');
-  width: 326px;
-  height: 334px;
+  /* width: 326px;
+  height: 334px; */
+  width: 90%;
+  height: 40%;
   background-position: center;
   background-size: cover;
-  position: absolute;
+
   bottom: 0;
   right: 20px;
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
+.extras {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  align-items: center;
+  justify-content: space-around;
+}
+
 .img3 {
   background-image: url('../../img/img3.png');
-  width: 333px;
-  height: 338px;
+  /* width: 333px;
+  height: 338px; */
+  width: 85%;
+  height: 35%;
   background-position: center;
   background-size: cover;
-  position: absolute;
+
   right: 30px;
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -97,6 +117,7 @@
   letter-spacing: 1px;
   font-weight: bold;
   cursor: pointer;
+  top: 50px;
 }
 
 .textoHero button::before {
