--- a/client/src/componentes/Card/cards.css
+++ b/client/src/componentes/Card/cards.css
@@ -1,30 +1,29 @@
-.card{
-    width: 350px;
-    height: 600px;
-    
+.card {
+  width: 350px;
+  height: 600px;
+  margin-top: 40px;
 }
 
-.card:hover{
-    box-shadow: 5px 10px 20px 1px gray !important;
-    transition: all 0.3s linear;
+.card:hover {
+  box-shadow: 5px 10px 20px 1px gray !important;
+  transition: all 0.3s linear;
 }
 
 .card-body {
-    padding: 2rem 0 !important;
+  padding: 2rem 0 !important;
 }
 
-.card-text{
-    padding: 0.3rem 1rem;
-    font-size: 1rem;
+.card-text {
+  padding: 0.3rem 1rem;
+  font-size: 1rem;
 }
 
-.overflow{
-    overflow: hidden;
-    width: 100%;
-    height: 300px;
-    border: 1px solid red;
-    background-size: cover;
-    background-position: center;
+.overflow {
+  overflow: hidden;
+  width: 100%;
+  height: 300px;
+  background-size: cover;
+  background-position: center;
 }
 
 /* .divimg{
@@ -34,10 +33,10 @@
     position: absolute;
 } */
 
-.card-img-top{
-    transition: all 0.3s ease-in-out;
+.card-img-top {
+  transition: all 0.3s ease-in-out;
 }
 
-.card-img-top:hover{
-    transform: scale(1.25)
+.card-img-top:hover {
+  transform: scale(1.25);
 }
