--- a/client/src/componentes/Paginate/Paginate.module.css
+++ b/client/src/componentes/Paginate/Paginate.module.css
@@ -1,21 +1,58 @@
-.buttons {
-    --size: 32px;
-    --margin: 6px;
-    margin: 0 var(--margin);
-    border-radius: 20px;
-    background: beige;
-    max-width: auto;
-    min-width: var(--size);
-    height: var(--size);
+.cardContainer {
+    border: none;
+    background-color: beige;
+    width: 220px;
+    height: 300px;
     display: flex;
+    flex-direction: column;
+}
+    /* justify-content: center; /
     align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    padding: 0 6px;
-    color: black;
 }
 
-.pagination{
+.imgCard {
+    transition: transform .2s; 
+}
+
+.imgCard:hover {
+    transform: scale(1.1);
+}
+
+.cardContainer:hover {
+    / transform: translateY(-0.4rem); /
+    / box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.25); /
+    transition: all 0.4s;
+    border: thin solid black;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+/ .cardInfo {
+    margin: 5px;
+} */
+
+.imgContainer {
+    background-color: #fff;
+    width: 100%;
+    height: 350px;
     display: flex;
-    justify-content:center;
+    justify-content: center;
+    align-items: center;
+}
+
+.pokeType {
+    background-color: #3c5aa6cc;
+    margin: 0;
+    width: 100%;
+    height: 35px;
+    color: #ffcb05bb;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 30px;
+}
+
+.pokeTypeContainer {
+    margin: 0;
+    display: flex;
+    width: 100%;
 }
