--- a/client/src/componentes/Paginate/Paginate.module.css
+++ b/client/src/componentes/Paginate/Paginate.module.css
@@ -1,47 +1,67 @@
 .paginadoContainer {
-    margin-bottom: 15px;
-    margin-top: 15px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .paginadoBotonContainer {
-    width: 135px;
-    display: flex;
-    justify-content: space-evenly;
+  width: 400px;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
 }
 
-.paginadoBoton {
-    background-color: #fff;
-    border: 1.5px solid #000;
-    color: #000;
-    font-weight: bold;
+.numberList {
+  background: rgb(0, 0, 0);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  font-size: 17px;
+  font-weight: 700;
+  color: white;
 }
 
-/* .paginadoBoton:visited {
-    transform: translateY(-0.25rem);
-    transition: all 0.4s;
-    cursor: pointer;
-    color: #fff;
-    background-color: rgba(128, 128, 128, 0.89);
-    box-shadow: 1px 2px 1px 0 rgb(60, 60, 60);
-} */
-
-.paginadoBoton:hover {
-    transform: translateY(-0.25rem);
-    transition: all 0.4s;
-    cursor: pointer;
-    color: #fff;
-    background-color: rgba(128, 128, 128, 0.89);
-    box-shadow: 1px 2px 1px 0 rgb(60, 60, 60);
+.current {
+  --clr-font-main: hsla(0 0% 20% / 100);
+  --btn-bg-1: hsla(194 100% 69% / 1);
+  --btn-bg-2: hsla(217 100% 56% / 1);
+  --btn-bg-color: hsla(360 100% 100% / 1);
+  --radii: 0.5em;
+  cursor: pointer;
+  padding: 10px 20px;
+  font-size: var(--size, 1rem);
+  font-family: 'Segoe UI', system-ui, sans-serif;
+  font-weight: 500;
+  transition: 0.8s;
+  background-size: 280% auto;
+  background-image: linear-gradient(
+    325deg,
+    var(--btn-bg-2) 0%,
+    var(--btn-bg-1) 55%,
+    var(--btn-bg-2) 90%
+  );
+  border: none;
+  border-radius: var(--radii);
+  color: var(--btn-bg-color);
+  box-shadow: 0px 0px 20px rgba(71, 184, 255, 0.5),
+    0px 5px 5px -1px rgba(58, 125, 233, 0.25),
+    inset 4px 4px 8px rgba(175, 230, 255, 0.5),
+    inset -4px -4px 8px rgba(19, 95, 216, 0.35);
 }
 
-.paginadoSelect {
-    transform: translateY(-0.25rem);
-    transition: all 0.4s;
-    cursor: pointer;
-    color: #fff;
-    background-color: rgba(128, 128, 128, 0.89);
-    box-shadow: 1px 2px 1px 0 rgb(60, 60, 60);
+.current:hover {
+  background-position: right top;
+}
+
+.current:is(:focus, :focus-within, :active) {
+  outline: none;
+  box-shadow: 0 0 0 3px var(--btn-bg-color), 0 0 0 6px var(--btn-bg-2);
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .btn-donate {
+    transition: linear;
+  }
 }
