--- a/client/src/componentes/navbar/filtros/filtros.module.css
+++ b/client/src/componentes/navbar/filtros/filtros.module.css
@@ -10,12 +10,35 @@
 }
 
 .select {
-  margin: 10px;
+  /* margin: 10px;
   padding: 5px 10px;
   background-color: black;
   color: white;
   font-weight: bold;
-  border-radius: 5px;
+  border-radius: 5px; */
+  --bg: #000;
+  --hover-bg: #ffffff;
+  --hover-text: #000;
+  color: #fff;
+  border: 1px solid var(--bg);
+  border-radius: 4px;
+  padding: 5px 10px;
+  margin: 10px;
+  font-weight: bold;
+  background: var(--bg);
+  transition: 0.2s;
+}
+
+.select:hover {
+  color: var(--hover-text);
+  transform: translate(-0.25rem, -0.25rem);
+  background: var(--hover-bg);
+  box-shadow: 0.25rem 0.25rem var(--bg);
+}
+
+.select:active {
+  transform: translate(0);
+  box-shadow: none;
 }
 
 .div button {
