--- a/client/src/componentes/navbar/navbar.module.css
+++ b/client/src/componentes/navbar/navbar.module.css
@@ -38,6 +38,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  margin-left: 15px;
 }
 
 .btn img {
@@ -48,8 +49,6 @@
   width: 35px;
 }
 
-.publicar {
-}
 
 .publicar button {
   padding: 5px 10px;
