css en el QA de customer y de admin

--- a/client/src/componentes/customersQA/QAForm.module.css
+++ b/client/src/componentes/customersQA/QAForm.module.css
@@ -1,6 +1,11 @@
 .form-container {
   display: flex;
   flex-direction: column;
+  margin-bottom: 5rem;
+}
+
+.form-container input {
+  border-radius: 5px;
 }
 
 .form-label {
