--- a/client/src/componentes/navbar/Perfil/Perfil.module.css
+++ b/client/src/componentes/navbar/Perfil/Perfil.module.css
@@ -85,7 +85,7 @@
     height: 100%;
     width: 0;
     border-radius: 15px;
-    background-color: #212121;
+    background-color: #4e4e4e;
     z-index: -1;
     -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
     box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
@@ -133,7 +133,7 @@
 .relacionados {
     width: 100%;
     height: 50%;
-    background-color: rgba(172, 244, 255, 0.288);
+    background-color: rgba(94, 94, 94, 0.699);
 }
 
 .section {
