--- a/client/src/componentes/Carrito/Carrito.module.css
+++ b/client/src/componentes/Carrito/Carrito.module.css
@@ -73,7 +73,7 @@
 
 .cartCont {
   background-color: #edeff0;
-  height: 100%;
+  height: 200vh;
   display: flex;
   flex-direction: column;
   align-items: center;
