--- a/client/src/componentes/details/details.module.css
+++ b/client/src/componentes/details/details.module.css
@@ -10,6 +10,17 @@
   background-color: black;
 }
 
+.btn h6 {
+  color: rgb(255, 255, 255);
+  border: solid rgba(0, 0, 0, 0.678) 0.1px;
+  width: 500px;
+  background-color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+}
+
 .white {
   width: 100%;
   height: 70%;
@@ -52,6 +63,78 @@
   width: 300px;
   position: absolute;
   right: 15%;
+}
+
+.profileMenu summary {
+  padding: 0px 5px;
+  /* width: 80px; */
+  position: relative;
+  overflow: hidden;
+  transition: all 0.3s;
+  background-color: #ffffff;
+  font-weight: bolder;
+  box-shadow: 0 2px 0 2px #000;
+  border-radius: 5px;
+  border: solid 1px black;
+  border-top: solid 2px black;
+}
+
+.desplegable {
+  border: 1px solid black;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.desplegable div {
+  border: 1px solid black;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 4px 10px;
+  background-color: #171717;
+}
+
+.button {
+  background: none;
+  border: 0;
+  cursor: default;
+  font: inherit;
+  line-height: normal;
+  overflow: visible;
+  padding: 0;
+  color: #fff;
+}
+
+.button:hover {
+  color: #2c96cf
+}
+
+.profileMenu summary:before {
+  content: '';
+  position: absolute;
+  width: 100px;
+  height: 120%;
+  background-color: #ff6700;
+  top: 50%;
+  transform: skewX(30deg) translate(-150%, -50%);
+  transition: all 0.5s;
+}
+
+.profileMenu summary:hover {
+  background-color: #000000;
+  color: #fff;
+  box-shadow: 0 2px 0 2px #3594ee;
+}
+
+.profileMenu summary:hover :before {
+  transform: skewX(30deg) translate(150%, -50%);
+  transition-delay: 0.1s;
+}
+
+.profileMenu summary:active {
+  transform: scale(0.9);
 }
 
 .backHome {
@@ -232,7 +315,7 @@
   top: 45%;
 }
 
-.spinner > div {
+.spinner>div {
   background-color: rgba(0, 77, 255, 0.2);
   height: 100%;
   position: absolute;
