--- a/client/src/componentes/navbar/filtros/filtros.module.css
+++ b/client/src/componentes/navbar/filtros/filtros.module.css
@@ -73,3 +73,28 @@
 .clear button:active {
   transform: scale(0.9);
 }
+
+
+ 
+@media (max-width: 768px){
+  .div {
+    display: flex;
+    flex-direction: column;  
+    width: 100%;
+  }
+
+  .clear button {
+    width: 190px;
+    position: relative;
+    overflow: hidden;
+    transition: all 0.3s;
+    background-color: #ecd448;
+    font-weight: bolder;
+    box-shadow: 0 2px 0 2px #000;
+    top: 10px;
+    right: -10%;
+  }
+
+
+
+}
