--- a/client/src/componentes/Card/cards.css
+++ b/client/src/componentes/Card/cards.css
@@ -34,3 +34,35 @@
 .card-img-top:hover {
   transform: scale(1.25);
 }
+
+
+@media (max-width: 768px){
+  .card {
+    width: 100%;
+    height: 400px !important;
+  }
+
+  .card-title{
+    font-size: 20px; 
+  }
+
+  .h55{
+    font-size: 15px;
+  }
+
+  .h44{
+    font-size: 15px;
+  }
+
+  .overflow {
+    overflow: hidden;
+    width: 100%;
+    height: 200px ;
+  }
+
+  
+.card-body {
+ padding: 5px;
+}
+
+}
