--- a/client/src/componentes/home/home.module.css
+++ b/client/src/componentes/home/home.module.css
@@ -1,3 +1,7 @@
+.divaHome{
+  width: 100%;
+
+}
 .hero {
   width: 100%;
   height: 85vh;
@@ -10,27 +14,7 @@
   position: relative;
   display: flex;
   align-items: center;
-}
 
-.select {
-  --bg: #000;
-  --hover-bg: #ffffff;
-  --hover-text: #000;
-  color: #fff;
-  border: 1px solid var(--bg);
-  border-radius: 4px;
-  padding: 5px 10px;
-  margin: 10px;
-  font-weight: bold;
-  background: var(--bg);
-  transition: 0.2s;
-}
-
-.select:hover {
-  color: var(--hover-text);
-  transform: translate(-0.25rem, -0.25rem);
-  background: var(--hover-bg);
-  box-shadow: 0.25rem 0.25rem var(--bg);
 }
 
 .section {
@@ -38,6 +22,7 @@
   display: grid;
   grid-template-columns: 400px 400px 400px;
   grid-template-rows: auto;
+
 }
 
 .notFound {
@@ -45,6 +30,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
 }
 
 .textoHero {
@@ -52,6 +38,7 @@
   height: 600px;
   position: absolute;
   left: 80px;
+
 }
 
 .imgHero {
@@ -61,14 +48,17 @@
   right: 80px;
   z-index: 100;
   display: flex;
+
 }
 
 .messi {
   width: 60%;
+
 }
 
 .extras {
   width: 40%;
+
 }
 
 .img1 {
@@ -93,13 +83,10 @@
 
 .img2 {
   background-image: url('../../img/img2.png');
-  /* width: 326px;
-  height: 334px; */
   width: 90%;
   height: 40%;
   background-position: center;
   background-size: cover;
-
   bottom: 0;
   right: 20px;
   border-radius: 3px;
@@ -116,13 +103,10 @@
 
 .img3 {
   background-image: url('../../img/img3.png');
-  /* width: 333px;
-  height: 338px; */
   width: 85%;
   height: 35%;
   background-position: center;
   background-size: cover;
-
   right: 30px;
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -132,11 +116,13 @@
   font-size: 100px;
   color: #ffffff;
   text-shadow: 3px 3px 0 #222, 5px 5px 0 #000000b5, 5px 5px 5px #f2f2f2;
+  border: 1px solid black;
 }
 
 .hero p {
   font-size: 30px;
   font-weight: bold;
+  border: 1px solid black;
 }
 
 .textoHero button {
@@ -168,6 +154,8 @@
   justify-content: center;
   transition: 0.15s ease-in-out;
   font-weight: bold;
+  border: 1px solid black;
+
 }
 
 .textoHero button:hover::before {
@@ -182,10 +170,51 @@
   color: white;
   font-weight: bold;
   border-radius: 5px;
+
 }
 
-.divCarrusel{
-  border: 1px solid black;
-  height: 250px;
-  width: 35%;
+@media (max-width: 768px){
+
+  .imgHero {
+    width: 80%;
+    height: 40%;
+    position: absolute;
+    right: 3.5%;
+    top: 330px;
+    z-index: 100;
+    display: flex;
+
+  }
+
+  .hero h1 {
+    font-size: 50px;
+    color: #ffffff;
+    text-shadow: 3px 3px 0 #222, 5px 5px 0 #000000b5, 5px 5px 5px #f2f2f2;
+ 
+  }
+  
+  .textoHero{
+    position: absolute;
+    left: 9%;
+    top: 50px;
+    width: 300px;
+    height: 200px;
+ 
+  }
+
+  .section {
+    justify-content: center;
+    display: grid;
+    grid-template-columns: 160px 160px;
+    grid-template-rows: auto;
+    grid-gap:20px;
+
+  }
+
+  .hero{
+    position: relative;
+    top: -22px;
+ 
+  }
+
 }
