--- a/client/src/componentes/ProductCreate/ProductCreate.module.css
+++ b/client/src/componentes/ProductCreate/ProductCreate.module.css
@@ -144,7 +144,7 @@
 
 .createCont {
   background-color: #edeff0;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -164,10 +164,45 @@
   align-items: center;
 }
 
+.inputI {
+  margin-top: 40px;
+  width: 400px;
+  position: relative;
+  padding-bottom: 40px;
+  display: flex;
+  align-items: center;
+}
+
+.inputI img {
+  position: absolute;
+  right: 0;
+}
+
+
+.inputI p {
+  position: absolute;
+  right: 0;
+  top: 25px;
+  width: 100%;
+}
+
+.inputI input {
+  position: absolute;
+  right: 100px;
+}
+
+.inputI label {
+  font-weight: bold;
+  margin-right: 30px;
+}
+
 .inputs {
-  margin-top: 20px;
+  margin-top: 40px;
   width: 300px;
   position: relative;
+  padding-bottom: 40px;
+  display: flex;
+  align-items: center;
 }
 
 .inputs input {
