--- a/client/src/componentes/details/details.module.css
+++ b/client/src/componentes/details/details.module.css
@@ -128,6 +128,25 @@
   box-shadow: 0 2px 0 2px #3594ee;
 }
 
+.btnQA {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-left: 15px;
+  border-radius: 5px;
+}
+
+.btnQA img {
+  width: 50px;
+}
+
+.btnQA:nth-child(3) img {
+  width: 35px;
+}
+
 .profileMenu summary:hover :before {
   transform: skewX(30deg) translate(150%, -50%);
   transition-delay: 0.1s;
