--- a/client/src/componentes/navbar/navbar.module.css
+++ b/client/src/componentes/navbar/navbar.module.css
@@ -7,17 +7,10 @@
   display: flex;
   flex-direction: column;
   position: sticky;
+  align-items: center;
   top: 0;
   z-index: 1000;
   border-bottom: 0.5px solid black;
-}
-
-/* parte negra superior del navbar */
-
-.black {
-  width: 100%;
-  height: 30%;
-  background-color: black;
 }
 
 .publicar button {
@@ -134,7 +127,7 @@
   transition: all 0.5s;
 }
 
-.admin{
+.admin {
   display: flex;
 }
 
@@ -192,7 +185,22 @@
   height: 50px;
   display: flex;
   right: 1%;
-  padding-right: 400px;
+}
+
+.backHome {
+  border: 1px solid black;
+  display: flex;
+  padding: 5px;
+  color: black;
+  background-color: white;
+  font-weight: bold;
+  transition: all 0.4s;
+  justify-content: center;
+  align-items: center;
+}
+
+.backHome:hover {
+  filter: invert(100%);
 }
 
 .btn {
@@ -237,6 +245,7 @@
   font-weight: bold;
   transition: all 0.4s;
 }
+
 @media (max-width: 768px) {
   .black {
     width: 100%;
@@ -278,6 +287,7 @@
     font-weight: bold;
     transition: all 0.4s;
   }
+
   .Hamburguesa {
     display: flex !important;
     flex-direction: column;
