--- a/client/src/componentes/Carrito/CartProduct.module.css
+++ b/client/src/componentes/Carrito/CartProduct.module.css
@@ -29,6 +29,11 @@
   border-radius: 5px;
   margin-left: 10px;
   font-weight: 500;
+  transition: all 0.3s;
+}
+
+.btns button:hover {
+  filter: invert(100%);
 }
 
 .info p {
