--- a/client/src/componentes/Favorites/FavoriteProduct.module.css
+++ b/client/src/componentes/Favorites/FavoriteProduct.module.css
@@ -11,14 +11,19 @@
   z-index: 10;
 }
 
+.itemmm {
+  width: 30%;
+}
+
 .itemm {
   width: 100%;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 .itemImg {
-  width: 20%;
+  width: 70%;
   height: 180px;
   margin-right: 20px;
   background-size: cover;
@@ -28,21 +33,23 @@
 
 .info {
   color: black;
+  position: absolute;
+  left: 23%;
 }
 
 .info p {
   font-weight: 500;
 }
 
-.item button {
+.itemm button {
   background-color: rgba(255, 62, 62, 0.966);
   color: white;
   border-radius: 5px;
   padding: 3px 10px;
   font-weight: bold;
   position: absolute;
-  right: 2%;
-  top: 7%;
+  right: 1%;
+  top: 5%;
   z-index: 100;
 }
 
@@ -52,6 +59,10 @@
     height: 150px;
     padding: 10px;
     position: relative;
+  }
+
+  .itemmm {
+    width: 80%;
   }
 
   .info h2 {
