--- a/client/src/componentes/details/details.module.css
+++ b/client/src/componentes/details/details.module.css
@@ -109,7 +109,7 @@
 }
 
 .button:hover {
-  color: #2c96cf
+  color: #2c96cf;
 }
 
 .profileMenu summary:before {
@@ -329,6 +329,22 @@
   width: 25px;
 }
 
+.current {
+  width: 50px;
+  height: 50px;
+  filter: invert(100%);
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.current img {
+  width: 25px;
+}
+
 .qyaCont {
   display: flex;
   flex-direction: column;
@@ -345,7 +361,7 @@
   top: 45%;
 }
 
-.spinner>div {
+.spinner > div {
   background-color: rgba(0, 77, 255, 0.2);
   height: 100%;
   position: absolute;
