no muestra productos sin stock, estilos simplificados

--- a/client/src/componentes/About/About.module.css
+++ b/client/src/componentes/About/About.module.css
@@ -1,54 +1,4 @@
-.createHeader {
-    height: 120px;
-    display: flex;
-    flex-direction: column;
-}
-
-.black {
+.contentAbout{
+    background-color: grey;
     width: 100%;
-    height: 30%;
-    background-color: black;
 }
-
-.white {
-    width: 100%;
-    height: 70%;
-    background-color: white;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.backHome {
-    border: 1px solid black;
-    display: flex;
-    padding: 5px;
-    color: black;
-    background-color: white;
-    font-weight: bold;
-    transition: all 0.4s;
-    position: absolute;
-    left: 3%;
-    top: 7%;
-}
-
-.backHome:hover {
-    filter: invert(100%);
-}
-
-.cont {
-    border: black 1px solid;
-    height: 100%;
-    background-color: #edeff0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-/* 
-.allInfo {
-    padding-top: 50px;
-    width: 40%;
-    height: 70%;
-    display: flex;
-    flex-direction: column;
-} */
