--- a/client/src/componentes/adminQA/UnansweredQuestion.module.css
+++ b/client/src/componentes/adminQA/UnansweredQuestion.module.css
@@ -19,9 +19,9 @@ img {
   transition: 0.2s;
 }
 
-.nombre-imagen p:hover {
+/* .nombre-imagen p:hover {
   font-size: 17px;
-}
+} */
 
 .nombre-imagen img {
   width: 1000px;
@@ -34,7 +34,7 @@ img {
 
 .nombre-imagen {
   /* border: 3px solid blue; */
-  background-color: rgba(114, 114, 114, 0.021);
+  background-color: #edeff0;
   margin-bottom: 1rem;
   display: flex;
   flex-direction: column;
@@ -88,4 +88,26 @@ img {
 
 .div1 {
   border: 3px solid red;
+}
+
+.name-delete-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.card-name {
+  padding-top: 1rem;
+  padding-right: 0.5rem;
+}
+
+.name-delete-container button {
+  padding: 0;
+  margin: 0;
+  margin-left: 2rem;
+  margin-top: 0.7rem;
+  margin-right: 0.2rem;
+  border-radius: 10%;
+  width: 2rem;
+  height: 2rem;
 }
