post y delete de categorías, SIN RESPONSIVE

--- a/client/src/componentes/modifCateg/modifCateg.module.css
+++ b/client/src/componentes/modifCateg/modifCateg.module.css
@@ -11,7 +11,7 @@
     font-size: 60px;
 }
 
-.categs{
+.categs {
     /* border: 1px solid black; */
     justify-content: space-around;
     display: flex;
@@ -37,7 +37,7 @@
     align-items: center;
 }
 
-.categ p{
+.categ p {
     margin-top: 8%;
     margin-left: 10px;
 }
@@ -61,8 +61,89 @@
     transition: all 0.3s ease;
     padding: 5px 10px;
     margin-bottom: 5px;
-    font-weight:600;
+    font-weight: 600;
     color: white;
+}
+
+.errors {
+    display: flex;
+    margin-top: 10px;
+    padding-left: 12px;
+    border-radius: 4px;
+    background-color: #ec39399d;
+    justify-content: center;
+}
+
+.forms {
+    padding-top: 50px;
+    width: 40%;
+    height: 70%;
+}
+
+.inputI {
+    margin-top: 40px;
+    margin-bottom: -60px;
+    /* width: 550px; */
+    padding-bottom: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+/* .inputI input {
+    position: absolute;
+    right: 100px;
+} */
+
+.inputI label {
+    font-weight: bold;
+    margin-right: 30px;
+}
+
+.publicar {
+    display: flex;
+    justify-content: center;
+}
+
+.publicar button {
+    margin-top: 50px;
+    padding: 15px 25px;
+    border: unset;
+    border-radius: 15px;
+    color: #212121;
+    z-index: 1;
+    background: #e8e8e8;
+    position: relative;
+    font-weight: 1000;
+    font-size: 17px;
+    -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+    box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+    transition: all 250ms;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.publicar button::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    border-radius: 15px;
+    background-color: #212121;
+    z-index: -1;
+    -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+    box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+    transition: all 250ms;
+}
+
+.publicar button:hover {
+    color: #e8e8e8;
+}
+
+.publicar button:hover::before {
+    width: 100%;
 }
 
 @media (max-width: 768px) {
