--- a/client/src/componentes/adminQA/AdminQA.module.css
+++ b/client/src/componentes/adminQA/AdminQA.module.css
@@ -17,3 +17,10 @@
     width: 90%;
   }
 }
+
+.question-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+}
