--- a/client/src/componentes/adminQA/UnansweredQuestion.module.css
+++ b/client/src/componentes/adminQA/UnansweredQuestion.module.css
@@ -4,6 +4,11 @@ img {
 }
 
 .admin-question {
+  background-color: #edeff0;
+
+  margin-left: 1rem;
+  margin-right: 1rem;
+
   display: flex;
   flex-direction: column;
   /* border: 3px solid red; */
@@ -35,6 +40,7 @@ img {
 .nombre-imagen {
   /* border: 3px solid blue; */
   background-color: #edeff0;
+
   margin-bottom: 1rem;
   display: flex;
   flex-direction: column;
@@ -82,18 +88,15 @@ img {
   padding-left: 1rem;
 }
 
-.div1 {
-  border: 3px solid green;
-}
-
-.div1 {
-  border: 3px solid red;
-}
-
 .name-delete-container {
+  /* border: 3px solid red; */
+  width: 100%;
+
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  justify-content: space-between;
+  padding-right: 1rem;
 }
 
 .card-name {
@@ -106,7 +109,6 @@ img {
   margin: 0;
   margin-left: 2rem;
   margin-top: 0.7rem;
-  margin-right: 0.2rem;
   border-radius: 10%;
   width: 2rem;
   height: 2rem;
