historial de compras y reducción de stock

--- a/client/src/componentes/navbar/navbar.module.css
+++ b/client/src/componentes/navbar/navbar.module.css
@@ -42,7 +42,8 @@
   justify-content: center;
   border-radius: 100%;
   position: absolute;
-  left: -27%;
+  left: 70%;
+  top: 5%;
 }
 
 .profileMenu summary {
