--- a/client/src/componentes/navbar/navBar2.module.css
+++ b/client/src/componentes/navbar/navBar2.module.css
@@ -35,7 +35,8 @@
   justify-content: center;
   border-radius: 100%;
   position: absolute;
-  left: -27%;
+  left: 70%;
+  top: 5%;
 }
 
 .profileMenu summary {
