--- a/client/src/componentes/VentasAdmin/VentasAdmin.module.css
+++ b/client/src/componentes/VentasAdmin/VentasAdmin.module.css
@@ -1,8 +1,9 @@
 .registro-parent-container {
-  margin: 3rem;
-  margin-left: 6rem;
-  margin-right: 6rem;
-  margin-bottom: 7rem;
+  background-color: #edeff0;
+  height: 200vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .registro {
