--- a/client/src/componentes/ReviewForm/ReviewForm.css
+++ b/client/src/componentes/ReviewForm/ReviewForm.css
@@ -10,3 +10,11 @@
 .off {
   color: #ccc;
 }
+
+.star-rating {
+  display: flex;
+  justify-content: center;
+  /* border: solid yellow 3px; */
+  height: 5rem;
+  margin-top: 1rem;
+}
