--- a/client/src/componentes/details/details.module.css
+++ b/client/src/componentes/details/details.module.css
@@ -86,7 +86,7 @@
   font-weight: bold;
 }
 
-.textCont button {
+.añadirCart {
   padding: 10px;
   width: 260px;
   outline: none;
@@ -99,12 +99,12 @@
   cursor: pointer;
 }
 
-.textCont button::before {
+.añadirCart::before {
   content: 'AÑADIR AL CARRITO';
   position: absolute;
   top: -14%;
   left: 7%;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   width: 100%;
   height: 100%;
   color: white;
@@ -115,7 +115,7 @@
   font-weight: bold;
 }
 
-.textCont button:hover::before {
+.añadirCart:hover::before {
   top: 0;
   left: 0;
 }
@@ -179,24 +179,26 @@
   align-items: center;
 }
 
-.btns{
-  display: flex;
+.btns button {
+  border: 0;
 }
 
-.bs img{
+.btns{
   display: flex;
+  width: 60%;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  padding: 5px 15px;
-  margin-left: 100px;
-  margin-right: 100px;
+  padding: 5px 15px; 
   transform: translateY(-140%);
+}
+
+.btns img{
   transition: all 0.4s;
 }
 
-.bs img:hover {
+.btns img:hover {
   border-radius: 5px;
-  transform: translateY(-90px);
+  transform: translateY(-10px);
 }
 
 
