--- a/client/src/componentes/VentasAdmin/VentaCard.module.css
+++ b/client/src/componentes/VentasAdmin/VentaCard.module.css
@@ -2,12 +2,12 @@
   /* border: solid blue 3px; */
   display: flex;
   flex-wrap: nowrap;
+  padding: 1rem;
   margin-bottom: 1.3rem;
-  min-width: 70%;
-  max-width: 70%;
+  min-width: 60%;
   justify-content: space-between;
   border-radius: 0.5rem;
-  box-shadow: 4px 4px 5px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 1px 5px 5px rgba(0, 0, 0, 0.2);
   background-color: #edeff0;
 }
 
