--- a/client/src/componentes/VentasAdmin/VentasAdmin.module.css
+++ b/client/src/componentes/VentasAdmin/VentasAdmin.module.css
@@ -1,6 +1,8 @@
 .registro-parent-container {
+  /* border: solid 3px blue; */
+  padding-top: 3rem;
   background-color: #edeff0;
-  height: 200vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,7 +17,7 @@
 .ventas-cards {
   margin-top: 3rem;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   display: flex;
   margin-left: 0;
   margin-right: 0;
@@ -23,6 +25,7 @@
   flex-direction: column;
   /* border: solid red 3px; */
   padding: 0;
+  width: 100%;
 }
 
 .filters-container select {
