--- a/client/src/componentes/VentasAdmin/VentasAdmin.module.css
+++ b/client/src/componentes/VentasAdmin/VentasAdmin.module.css
@@ -51,3 +51,10 @@
 .sent {
   font-weight: bold;
 }
+
+@media (max-width: 768px) {
+  .registro {
+    margin-left: 40px;
+    margin-top: 10px;
+  }
+}
