--- a/client/src/componentes/navbar/navBar2.module.css
+++ b/client/src/componentes/navbar/navBar2.module.css
@@ -243,6 +243,36 @@
     0 12px 10px -3px #39a2db;
 }
 
+.historial button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  border-radius: 5px;
+  background-color: #000000;
+  width: 135px;
+  height: 55px;
+  color: #fff;
+  font-weight: bold;
+  transition: all 0.4s;
+}
+
+.historial button:hover {
+  border-radius: 5px;
+  transform: translateY(-10px);
+  box-shadow: 0 7px 0 -2px #f85959, 0 15px 0 -4px #39a2db,
+    0 16px 10px -3px #39a2db;
+}
+
+.historial button:active {
+  transition: all 0.2s;
+  transform: translateY(-5px);
+  box-shadow: 0 2px 0 -2px #f85959, 0 8px 0 -4px #39a2db,
+    0 12px 10px -3px #39a2db;
+}
+
 @media (max-width: 768px) {
   .backHome {
     position: absolute;
@@ -279,7 +309,20 @@
   .publicar button {
     position: absolute;
     top: 250%;
-    right: -75%;
+    right: -5%;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: #171717;
+    color: #fff;
+    font-weight: bold;
+    transition: all 0.4s;
+    filter: invert(100%);
+  }
+
+  .historial button {
+    position: absolute;
+    top: 250%;
+    right: -95%;
     padding: 5px 10px;
     border-radius: 5px;
     background-color: #171717;
