agregado boton a componente historial de compras de usuario. Y notificacion por correo al responder pregunta

--- a/client/src/componentes/customersQA/QAAnsweredQuestions.module.css
+++ b/client/src/componentes/customersQA/QAAnsweredQuestions.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  /* border: 3px solid green; */
 }
 
 .titulo-preguntas {
