--- a/client/src/componentes/customersQA/QAAnsweredQuestion.module.css
+++ b/client/src/componentes/customersQA/QAAnsweredQuestion.module.css
@@ -3,9 +3,7 @@
   border-radius: 8px;
   width: 30rem;
   padding: 1rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-
+  margin: 1rem;
   padding-left: 2rem;
 }
 
