arreglando mal merge

--- a/client/src/componentes/ProductCreate/ProductCreate.module.css
+++ b/client/src/componentes/ProductCreate/ProductCreate.module.css
@@ -9,17 +9,15 @@
 
 .createCont {
   background-color: #edeff0;
-  height: 200vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 .createCont h1 {
   font-weight: bold;
   font-size: 60px;
-  margin-left: -3%;
 }
 
 .forms {
