--- a/client/src/componentes/details/details.module.css
+++ b/client/src/componentes/details/details.module.css
@@ -17,32 +17,6 @@
   width: 35px;
 }
 
-.profileMenu summary:hover :before {
-  transform: skewX(30deg) translate(150%, -50%);
-  transition-delay: 0.1s;
-}
-
-.profileMenu summary:active {
-  transform: scale(0.9);
-}
-
-.backHome {
-  border: 1px solid black;
-  display: flex;
-  padding: 5px;
-  color: black;
-  background-color: white;
-  font-weight: bold;
-  transition: all 0.4s;
-  position: absolute;
-  left: 3%;
-  top: 130px;
-}
-
-.backHome:hover {
-  filter: invert(100%);
-}
-
 .detailCont {
   width: 100%;
   height: 85vh;
@@ -112,7 +86,7 @@
   font-weight: bold;
 }
 
-.añadirCart {
+.textCont button {
   padding: 10px;
   width: 260px;
   outline: none;
@@ -125,12 +99,13 @@
   cursor: pointer;
 }
 
-.añadirCart::before {
+.textCont button::before {
   content: 'AÑADIR AL CARRITO';
+  /*Button's value/text-content */
   position: absolute;
   top: -14%;
   left: 7%;
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   width: 100%;
   height: 100%;
   color: white;
@@ -141,7 +116,7 @@
   font-weight: bold;
 }
 
-.añadirCart:hover::before {
+.textCont button:hover::before {
   top: 0;
   left: 0;
 }
@@ -205,29 +180,6 @@
   align-items: center;
 }
 
-.btns button {
-  border: 0;
-}
-
-.btns{
-  display: flex;
-  width: 60%;
-  justify-content: space-around;
-  align-items: center;
-  padding: 5px 15px; 
-  transform: translateY(-140%);
-}
-
-.btns img{
-  transition: all 0.4s;
-}
-
-.btns img:hover {
-  border-radius: 5px;
-  transform: translateY(-10px);
-}
-
-
 .spinner {
   width: 200px;
   height: 200px;
@@ -238,7 +190,7 @@
   top: 45%;
 }
 
-.spinner > div {
+.spinner>div {
   background-color: rgba(0, 77, 255, 0.2);
   height: 100%;
   position: absolute;
@@ -308,7 +260,7 @@
 
   .textCont {
     width: 100%;
-    height: 60%;
+    height: 50%;
     position: relative;
   }
 
