arreglado feedback de validacion en add Role input

--- a/client/src/componentes/superAdmin/superAdmin.module.css
+++ b/client/src/componentes/superAdmin/superAdmin.module.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 .divAdmins {
-  /* border: 1px solid black; */
+  /* border: 3px solid red; */
   text-align: center;
   width: 40%;
   border: 0.5px solid black;
