--- a/client/src/componentes/superAdmin/AddAdmin.module.css
+++ b/client/src/componentes/superAdmin/AddAdmin.module.css
@@ -1,7 +1,7 @@
 .add-role-container {
   margin-top: 5.1rem;
   border: solid black 1px;
-  width: 20rem;
+  height: 28rem;
   display: flex;
   justify-content: center;
   width: 35rem;
@@ -17,6 +17,15 @@
   font-weight: bold;
   margin: 1.5rem;
   margin-bottom: 1.7rem;
+}
+
+.filter-users input {
+  padding: 0.35rem;
+}
+
+.email-select select {
+  width: 25rem;
+  padding: 0.5rem;
 }
 
 .add-submit {
@@ -35,6 +44,7 @@
   justify-content: center;
   align-items: center;
   padding: 0.7rem;
+  width: 15rem;
 }
 .add-submit button:hover {
   filter: invert(100%);
