--- a/client/src/componentes/superAdmin/BlockUser.module.css
+++ b/client/src/componentes/superAdmin/BlockUser.module.css
@@ -1,4 +1,69 @@
-.add-role-container {
-  margin-top: 10rem;
-  margin-bottom: 10rem;
+.blocking-container {
+  margin-top: 5.1rem;
+  border: solid black 1px;
+  height: 28rem;
+  display: flex;
+  justify-content: center;
+  width: 35rem;
+  padding-bottom: 1rem;
+}
+
+.blocking-container p {
+  margin-top: 3rem;
+  font-weight: bold;
+  font-size: 1.6rem;
+}
+
+.email-select label {
+  font-weight: bold;
+  margin: 1.5rem;
+  margin-bottom: 1.7rem;
+}
+
+.filter-users input {
+  padding: 0.35rem;
+}
+
+.email-select select {
+  width: 25rem;
+  padding: 0.5rem;
+}
+
+.blocking-submit {
+  margin: 1rem;
+  margin-top: 1.5rem;
+}
+
+.blocking-submit button {
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  background-color: white;
+  border: 1px solid black;
+  color: black;
+  transition: all 0.4s;
+  font-weight: bold;
+  justify-content: center;
+  align-items: center;
+  padding: 0.7rem;
+  width: 15rem;
+}
+.blocking-submit button:hover {
+  filter: invert(100%);
+}
+
+.filter-users {
+  /* border: solid purple 3px; */
+  margin-top: 2rem;
+  margin-bottom: 0;
+}
+
+.response-container {
+  height: 6rem;
+  /* border: 3px solid blue; */
+}
+
+.response-container p {
+  margin: 0;
+  font-size: medium;
+  font-weight: normal;
 }
