--- a/client/src/componentes/superAdmin/superAdmin.module.css
+++ b/client/src/componentes/superAdmin/superAdmin.module.css
@@ -1,6 +1,9 @@
 .divPadre {
   text-align: center;
+  /* border: 3px solid blue; */
+  padding-bottom: 12rem;
 }
+
 .divAdmins {
   /* border: 3px solid red; */
   text-align: center;
@@ -10,11 +13,13 @@
   top: 85px;
   left: 1%;
 }
+
 .admin {
   font-size: 16px;
   margin: 10px;
   background-color: #edeff0;
 }
+
 .buttonAdmins {
   background-color: white;
   border: 1px solid black;
@@ -24,9 +29,11 @@
   justify-content: center;
   align-items: center;
 }
+
 .buttonAdmins:hover {
   filter: invert(100%);
 }
+
 .admins {
   width: 98%;
   height: 50px;
@@ -50,4 +57,5 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: flex-start;
 }
