--- a/client/src/componentes/HistorialUsuario/Compras.module.css
+++ b/client/src/componentes/HistorialUsuario/Compras.module.css
@@ -17,9 +17,18 @@
 
 .imgCont img {
   object-fit: cover;
-  object-position: center;
-  min-width: 90%;
-  min-height: 90%;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.itemImg {
+  border: 0.5px solid rgb(143, 143, 143);
+  width: 250px;
+  height: 220px;
+  /* margin-right: 20px; */
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
 }
 
 .textCont {
@@ -62,9 +71,18 @@
 
   .imgCont img {
     object-fit: cover;
-    object-position: center;
-    min-width: 70%;
-    min-height: 70%;
+    min-width: 100%;
+    min-height: 100%;
+  }
+  
+  .itemImg {
+    border: 0.5px solid rgb(143, 143, 143);
+    width: 200px;
+    height: 150px;
+    margin-left: 20px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 5px;
   }
 
   .textCont {
